add file conn log
