# docs/admin/admin_swagger.yaml
@@ -75,6 +75,8 @@ definitions:
         type: integer
       name:
         type: string
+      type:
+        type: integer
     required:
     - name
     type: object
@@ -307,6 +309,48 @@ definitions:
       list:
         items:
           $ref: '#/definitions/model.AuditConn'
+        type: array
+      page:
+        type: integer
+      page_size:
+        type: integer
+      total:
+        type: integer
+    type: object
+  model.AuditFile:
+    properties:
+      created_at:
+        type: string
+      from_name:
+        type: string
+      from_peer:
+        type: string
+      id:
+        type: integer
+      info:
+        type: string
+      ip:
+        type: string
+      is_file:
+        type: boolean
+      num:
+        type: integer
+      path:
+        type: string
+      peer_id:
+        type: string
+      type:
+        type: integer
+      updated_at:
+        type: string
+      uuid:
+        type: string
+    type: object
+  model.AuditFileList:
+    properties:
+      list:
+        items:
+          $ref: '#/definitions/model.AuditFile'
         type: array
       page:
         type: integer
@@ -765,14 +809,14 @@ paths:
     post:
       consumes:
       - application/json
-      description: 链接日志删除
+      description: 文件日志删除
       parameters:
-      - description: 链接日志信息
+      - description: 文件日志信息
         in: body
         name: body
         required: true
         schema:
-          $ref: '#/definitions/model.AuditConn'
+          $ref: '#/definitions/model.AuditFile'
       produces:
       - application/json
       responses:
@@ -786,14 +830,14 @@ paths:
             $ref: '#/definitions/response.Response'
       security:
       - token: []
-      summary: 链接日志删除
+      summary: 文件日志删除
       tags:
-      - 链接日志
+      - 文件日志
   /admin/audit_conn/list:
     get:
       consumes:
       - application/json
-      description: 链接日志列表
+      description: 文件日志列表
       parameters:
       - description: 页码
         in: query
@@ -821,7 +865,7 @@ paths:
             - $ref: '#/definitions/response.Response'
             - properties:
                 data:
-                  $ref: '#/definitions/model.AuditConnList'
+                  $ref: '#/definitions/model.AuditFileList'
               type: object
         "500":
           description: Internal Server Error
@@ -829,9 +873,9 @@ paths:
             $ref: '#/definitions/response.Response'
       security:
       - token: []
-      summary: 链接日志列表
+      summary: 文件日志列表
       tags:
-      - 链接日志
+      - 文件日志
   /admin/file/oss_token:
     get:
       consumes:
